[DP-317] test: implement unit tests for admin blog post detail API #done